# FlashParse

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  glmocr_config.yaml  pyproject.toml
.github/workflows/: docker-publish.yml
documentation/: ADR.md  CONTRIBUTING.md  benchmark_results.md  glm_ocr_upstream_changes.md  inference_tuning_guide.md  inferencing_strategies.md  misc_ocr_strategies.md  system_architecture.md
examples/: client_example.py
examples/output/2022統合報告書-1-12/: 2022統合報告書-1-12_with_captions.mmd  metadata.json  parsing_metrics.json
scripts/: start_vllm.sh
src/glm_hybrid_ocr/: __init__.py
src/glm_hybrid_ocr/api/: main.py
src/glm_hybrid_ocr/api/routes/: pdf.py
src/glm_hybrid_ocr/clients/: vlm_client.py
src/glm_hybrid_ocr/config/: __init__.py  constants.py  prompts.py  settings.py
src/glm_hybrid_ocr/markdown/: assembler.py
src/glm_hybrid_ocr/models/: __init__.py  types.py
src/glm_hybrid_ocr/pipeline/: orchestrator.py
src/glm_hybrid_ocr/utils/: convert.py  extract.py  image_utils.py  text_utils.py
src/glm_hybrid_ocr/vlm/: captioner.py  classifier.py  classify_and_caption.py
tests/: bench_vram.py  benchmark_misc_ocr.py  benchmark_ocr.py  concurrent_pdf_test.py  load_test.py  test_concurrency.py  test_file_formats.py  test_pipeline.py  test_timing.py
